{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 282,
  "lineage": "5273b943-4bc6-1f59-8c13-700438a8e552",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-01T00:49:12.319-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/csb-middleware-bench/global/firewalls/allow-external",
            "log_config": [],
            "name": "allow-external",
            "network": "https://www.googleapis.com/compute/v1/projects/csb-middleware-bench/global/networks/csb-vpc",
            "priority": 1000,
            "project": "csb-middleware-bench",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csb-middleware-bench/global/firewalls/allow-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-02-01T00:49:12.574-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/csb-middleware-bench/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/csb-middleware-bench/global/networks/csb-vpc",
            "priority": 1000,
            "project": "csb-middleware-bench",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csb-middleware-bench/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "client_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20240126",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/csb-middleware-bench/zones/europe-west10-a/disks/client-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/csb-middleware-bench/zones/europe-west10-a/instances/client-vm",
            "instance_id": "5788472275730097648",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-16",
            "metadata": {
              "ssh-keys": "user_name:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC/2FzbUc2zlHW3knDu+dI3qgsM2LHO8cm5i1uAZ2s1TKz5vxA+oR8Rh54aGTKQQKhSZbI5Cr8BoKSrfWu0hHgI6TG0zU34KvULNtyP/1NCaZ5zGn1+XeCrufdqtg3elDG1hMgvKk2feN5yq+U903OHHeRbYnuBGL/1Rs0icchkemftvOS2cNUbdUJFd5Xe6hdb6WzeWsG81Kc3BzocU0iPPiIagND9VJi41CshCvSBLO70ls1e0eEPzpoKutOFOPkcL0AOnJtp3dOhsgzfMt2TqbOp6XFrgrtP9HjS04XKacRiiKg6p2TzGfJv2XQqf6KPwWayYLXF3rfTvAKCK7AV2iPxzpIHL1cTTZdepR6MVRVCnpgv19vqpujeDxvTkiqdnmgvN5GgTJv/bnNdjKEoFhmTRKu2CH46ZKoc92P [...]
            },
            "metadata_fingerprint": "hxi5t9ITr2M=",
            "metadata_startup_script": "sudo apt-get update -y\nsudo apt-get install ca-certificates curl gnupg -y\nsudo install -m 0755 -d /etc/apt/keyrings\ncurl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg\nsudo chmod a+r /etc/apt/keyrings/docker.gpg\n\n# Add the repository to Apt sources:\necho \\\n    \"deb [arch=\"$(dpkg --print-architecture)\" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \\\n    [...]
            "name": "client-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.32.23.42",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/csb-middleware-bench/global/networks/csb-vpc",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/csb-middleware-bench/regions/europe-west10/subnetworks/csb-subnet",
                "subnetwork_project": "csb-middleware-bench"
              }
            ],
            "project": "csb-middleware-bench",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/csb-middleware-bench/zones/europe-west10-a/instances/client-vm",
            "service_account": [
              {
                "email": "708356171825-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "6smc4R4d39I=",
            "zone": "europe-west10-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "server_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20240126",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/csb-middleware-bench/zones/europe-west10-a/disks/server-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/csb-middleware-bench/zones/europe-west10-a/instances/server-vm",
            "instance_id": "5561859063774897648",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "ssh-keys": "user_name:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC/2FzbUc2zlHW3knDu+dI3qgsM2LHO8cm5i1uAZ2s1TKz5vxA+oR8Rh54aGTKQQKhSZbI5Cr8BoKSrfWu0hHgI6TG0zU34KvULNtyP/1NCaZ5zGn1+XeCrufdqtg3elDG1hMgvKk2feN5yq+U903OHHeRbYnuBGL/1Rs0icchkemftvOS2cNUbdUJFd5Xe6hdb6WzeWsG81Kc3BzocU0iPPiIagND9VJi41CshCvSBLO70ls1e0eEPzpoKutOFOPkcL0AOnJtp3dOhsgzfMt2TqbOp6XFrgrtP9HjS04XKacRiiKg6p2TzGfJv2XQqf6KPwWayYLXF3rfTvAKCK7AV2iPxzpIHL1cTTZdepR6MVRVCnpgv19vqpujeDxvTkiqdnmgvN5GgTJv/bnNdjKEoFhmTRKu2CH46ZKoc92P [...]
            },
            "metadata_fingerprint": "HQ8uVa8ZrF4=",
            "metadata_startup_script": "sudo apt-get update -y\nsudo apt-get install ca-certificates curl gnupg -y\nsudo install -m 0755 -d /etc/apt/keyrings\ncurl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg\nsudo chmod a+r /etc/apt/keyrings/docker.gpg\n\n# Add the repository to Apt sources:\necho \\\n    \"deb [arch=\"$(dpkg --print-architecture)\" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \\\n    [...]
            "name": "server-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.32.28.106",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/csb-middleware-bench/global/networks/csb-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/csb-middleware-bench/regions/europe-west10/subnetworks/csb-subnet",
                "subnetwork_project": "csb-middleware-bench"
              }
            ],
            "project": "csb-middleware-bench",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/csb-middleware-bench/zones/europe-west10-a/instances/server-vm",
            "service_account": [
              {
                "email": "708356171825-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-client",
              "https-client"
            ],
            "tags_fingerprint": "GDmlen9sTTI=",
            "zone": "europe-west10-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/csb-middleware-bench/global/networks/csb-vpc",
            "mtu": 0,
            "name": "csb-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2873081336000078867",
            "project": "csb-middleware-bench",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csb-middleware-bench/global/networks/csb-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-01T00:49:13.259-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/csb-middleware-bench/regions/europe-west10/subnetworks/csb-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "csb-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/csb-middleware-bench/global/networks/csb-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "csb-middleware-bench",
            "purpose": "PRIVATE",
            "region": "europe-west10",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csb-middleware-bench/regions/europe-west10/subnetworks/csb-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}